[gd_scene load_steps=11 format=3 uid="uid://bbql2d76ikoxt"]

[ext_resource type="Script" uid="uid://djg64ejcfus52" path="res://player/Cam3DControllerComponent.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://cq5jjo5owvab4" path="res://player/player.gd" id="1_rkbax"]
[ext_resource type="Script" uid="uid://cqnkol0vmdqhi" path="res://player/Crouch3DControllerComponent.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://cscwk0fpp7vcu" path="res://player/FovControllerComponent.gd" id="3_yw30f"]
[ext_resource type="PackedScene" uid="uid://be3trfu5035vj" path="res://player/ui.tscn" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://dj4eujfdlgafj" path="res://player/Headbob3DControllerComponent.gd" id="5_qjkh3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rkbax"]

[sub_resource type="Animation" id="Animation_g6k8r"]
resource_name = "head_bob"
length = 2.0

[sub_resource type="Animation" id="Animation_boad6"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_boad6"),
&"head_bob": SubResource("Animation_g6k8r")
}

[node name="player" type="CharacterBody3D" node_paths=PackedStringArray("cam3DControllerComponent", "fovControllerComponent", "crouch3DControllerComponent")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 32769
collision_mask = 32769
script = ExtResource("1_rkbax")
cam3DControllerComponent = NodePath("Cam3DControllerComponent")
fovControllerComponent = NodePath("FovControllerComponent")
crouch3DControllerComponent = NodePath("Crouch3DControllerComponent")

[node name="Cam3DControllerComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "camera")]
script = ExtResource("1_oul6g")
actor = NodePath("..")
camera = NodePath("../Camera3D")

[node name="FovControllerComponent" type="Node" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("3_yw30f")
camera = NodePath("../Camera3D")

[node name="Crouch3DControllerComponent" type="Node" parent="." node_paths=PackedStringArray("crouchcast", "characterBody", "camera", "collider", "headbob3DControllerComponent")]
script = ExtResource("3_g1dw6")
crouchcast = NodePath("../crouch_cast")
characterBody = NodePath("..")
camera = NodePath("../Camera3D")
collider = NodePath("../CollisionShape3D")
headbob3DControllerComponent = NodePath("../Headbob3DControllerComponent")
metadata/_custom_type_script = "uid://cqnkol0vmdqhi"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rkbax")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="ui" parent="Camera3D" instance=ExtResource("5_g6k8r")]

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 28.0
offset_bottom = 23.0
scale = Vector2(3.96, 3.96)
text = "fps:"

[node name="crouch_cast" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}

[node name="Headbob3DControllerComponent" type="Node" parent="."]
script = ExtResource("5_qjkh3")
